k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knorten
  namespace: knada-system
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: knorten
spec:
  replicas: 2
  selector:
    matchLabels:
      app: knorten
  template:
    metadata:
      labels:
        app: knorten
      annotations:
        kubectl.kubernetes.io/default-container: knorten
    spec:
      serviceAccountName: knorten
      nodeSelector:
        knada-infrastructure: ""
      tolerations:
        - key: "knada-infrastructure"
          effect: "NoSchedule"
          operator: "Exists"
      containers:
        - name: knorten
          image: europe-north1-docker.pkg.dev/knada-gcp/knada-north/knorten
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: helm-repos-config
              mountPath: /home/knorten/.config/helm/repositories.yaml
              subPath: repositories.yaml
            - name: knorten-config
              mountPath: /home/knorten/config.yaml
              subPath: config.yaml
            - name: github-private-key
              mountPath: /home/knorten/github-app-private-key.pem
              subPath: PRIVATE_KEY
            - name: knorten-maintenance-exclusion-dates
              mountPath: /home/knorten/maintenance-exclusion-dates.json
              subPath: maintenance_exclusion_dates
          resources:
            limits:
              memory: 2.5Gi
            requests:
              cpu: 200m
              memory: 128Mi
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            allowPrivilegeEscalation: false
        - name: cloudsql-proxy
          command: 
          - <placeholder>
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.6.0-alpine
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 24Mi
          ports:
            - containerPort: 5432
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 2
            runAsNonRoot: true
            runAsUser: 2
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: elector
          image: europe-north1-docker.pkg.dev/nais-io/nais/images/elector:2023-12-19-121147-d47e080
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
          command:
            - /elector
            - --election=knorten
            - --http=localhost:4040
            - --election-namespace=knada-system
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
      volumes:
        - name: helm-repos-config
          configMap:
            name: helm-repos
            defaultMode: 420
        - name: knorten-config
          configMap:
              name: knorten-config
        - name: github-private-key
          secret:
            secretName: github-app-secret
        - name: knorten-maintenance-exclusion-dates
          configMap:
              name: knorten-maintenance-exclusion-dates
      securityContext:
        runAsNonRoot: true
