k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: knorten
  namespace: knada-system
spec:
  hostnames:
  - knorten.knada.io
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: knada-io
    namespace: knada-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: knorten
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
